More changes to slingshots. Added in some textures

--- a/src/main/resources/assets/grimpack/lang/en_US.lang
+++ b/src/main/resources/assets/grimpack/lang/en_US.lang
@@ -313,6 +313,23 @@ item.backpack_light_blue.name=Light Blue Backpack
 item.backpack_magenta.name=Magenta Backpack
 item.backpack_orange.name=Orange Backpack
 item.backpack_white.name=White Backpack
+item.pellet_bag_leather.name=Leather Pellet Bag
+item.pellet_bag_black.name=Black Pellet Bag
+item.pellet_bag_red.name=Red Pellet Bag
+item.pellet_bag_green.name=Green Pellet Bag
+item.pellet_bag_brown.name=Brown Pellet Bag
+item.pellet_bag_blue.name=Blue Pellet Bag
+item.pellet_bag_purple.name=Purple Pellet Bag
+item.pellet_bag_cyan.name=Cyan Pellet Bag
+item.pellet_bag_silver.name=Silver Pellet Bag
+item.pellet_bag_gray.name=Gray Pellet Bag
+item.pellet_bag_pink.name=Pink Pellet Bag
+item.pellet_bag_lime.name=Lime Pellet Bag
+item.pellet_bag_yellow.name=Yellow Pellet Bag
+item.pellet_bag_light_blue.name=Light Blue Pellet Bag
+item.pellet_bag_magenta.name=Magenta Pellet Bag
+item.pellet_bag_orange.name=Orange Pellet Bag
+item.pellet_bag_white.name=White Pellet Bag
 item.loaded_knife.name=Loaded Ballistic Knife
 item.unloaded_knife.name=Empty Ballistic Knife
 item.ammo_part.name=Ballistic Knife Blade
@@ -384,7 +401,12 @@ item.advanced_energy_canister.name=Advanced Energy Canister
 item.advanced_ray_gun.name=Advanced Raygun
 item.dark_iron_ingot.name=Dark Iron Ingot
 item.sling_shot.name=Slingshot
-item.sling_pellet.name=Slingshot Pellet
+item.sling_pellet.stone.name=Stone Pellet
+item.sling_pellet.iron.name=Iron Pellet
+item.sling_pellet.netherrack.name=Netherrack Pellet
+item.sling_pellet.light.name=Light Pellet
+item.sling_pellet.fire.name=Fire Pellet
+item.sling_pellet.explosion.name=Explosion Pellet
 item.spear.name=Throwing Spear
 item.iron_spear.name=Iron Spear
 item.diamond_spear.name=Diamond Spear
