--- a/src/main/resources/assets/grimpack/lang/en_US.lang
+++ b/src/main/resources/assets/grimpack/lang/en_US.lang
@@ -155,13 +155,37 @@ tile.fungus_building.5.name=Cobblestone Building Fungus
 tile.fungus_building.6.name=StoneBrick Building Fungus
 tile.fungus_building.7.name=Sandstone Building Fungus
 tile.fungus_building.8.name=Lava Building Fungus
-tile.fungus_building.9.name=Dirt Layer Building Fungus
-tile.fungus_building.10.name=SmoothStone Layer Building Fungus
-tile.fungus_building.11.name=Maze Building Fungus
-tile.fungus_building.12.name=Netherrack Layer Building Fungus
-tile.fungus_building.13.name=Cobblestone Layer Building Fungus
-tile.fungus_building.14.name=StoneBrick Layer Building Fungus
-tile.fungus_building.15.name=Sandstone Layer Building Fungus
+tile.fungus_building.9.name=Glowstone Building Fungus
+tile.fungus_building.10.name=Clay Building Fungus
+tile.fungus_building.11.name=Randomite Building Fungus
+tile.fungus_building.12.name=Leaves Building Fungus
+tile.fungus_building.13.name=Gravel Building Fungus
+tile.fungus_building.14.name=Snow Building Fungus
+tile.fungus_building.15.name=End Stone Building Fungus
+
+#Ore Building Fungus
+tile.fungus_ore_building.0.name=Ore Building Fungus
+
+#Layer Building Fungus
+tile.fungus_layer_building.0.name=Mossy Cobblestone Layer Building Fungus
+tile.fungus_layer_building.1.name=Dirt Layer Building Fungus
+tile.fungus_layer_building.2.name=SmoothStone Layer Building Fungus
+tile.fungus_layer_building.3.name=Sand Layer Building Fungus
+tile.fungus_layer_building.4.name=Netherrack Layer Building Fungus
+tile.fungus_layer_building.5.name=Cobblestone Layer Building Fungus
+tile.fungus_layer_building.6.name=StoneBrick Layer Building Fungus
+tile.fungus_layer_building.7.name=Sandstone Layer Building Fungus
+tile.fungus_layer_building.8.name=Gravel Layer Building Fungus
+tile.fungus_layer_building.9.name=Obsidian Layer Building Fungus
+tile.fungus_layer_building.10.name=Snow Layer Building Fungus
+tile.fungus_layer_building.11.name=Soul Sand Layer Building Fungus
+tile.fungus_layer_building.12.name=Prismarine Layer Building Fungus
+tile.fungus_layer_building.13.name=Magma Layer Building Fungus
+tile.fungus_layer_building.14.name=Oak Planks Layer Building Fungus
+tile.fungus_layer_building.15.name=Packed Ice Layer Building Fungus
+
+#Maze Fungus
+tile.fungus_maze.0.name=Maze Building Fungus
 #Acid Fungus
 tile.fungus_killing.0.name=Dark Acid Fungus
 tile.fungus_killing.1.name=Rapid Dark Acid Fungus
@@ -278,6 +302,7 @@ item.refined_uranium.name=Refined Uranium
 item.uranium_ingot.name=Uranium Ingot
 item.gravity_controller.name=Gravity Controller
 item.low_gravity_controller.name=Low Gravity Controller
+item.mob_repulsor.name=Mob Repulsor
 item.aluminum_can.name=Aluminum Cannister
 item.aluminum_ingot.name=Aluminum Ingot
 item.aluminum_shaft.name=Aluminum Shaft
@@ -936,6 +961,8 @@ grimpack.manual.industry.subsection.gravity.page.attract=Their are two types of 
 grimpack.manual.industry.subsection.gravity.page.attract.title=Attractors
 grimpack.manual.industry.subsection.gravity.page.repulse=Their are two types of repulsors the regular Repulsor and the Directional Repulsor. When powered the regular Repulsor will start to push entities away with a range of 12 blocks. The Directional Repulsor is different because only the side with the repulsor end will push entities. 
 grimpack.manual.industry.subsection.gravity.page.repulse.title=Repulsors
+grimpack.manual.industry.subsection.gravity.page.mob_repulsor=The mob repulsor is a portable item that makes all hostile mob do their very best to get out of your way. Passive mobs, players and items are not affected. Gravity boots are not required. Right click to activate.
+grimpack.manual.industry.subsection.gravity.page.mob_repulsor.title=Mob Repulsor
 grimpack.manual.industry.subsection.gravity.page.gravitor=Their are two types of gravitors the regular Gravitor and the Directional Gravitor. When powered the regular Gravitor will start to make entities around it float into the air. The Directional Gravitor is different because only the side with the gravitor end will make entities float into the air. 
 grimpack.manual.industry.subsection.gravity.page.gravitor.title=Gravitors
 grimpack.manual.industry.subsection.elemental=Elemental Blocks
