Local changes to en_US.lang. Fix for Pellet Bag gui.

--- a/src/main/resources/assets/grimpack/lang/en_US.lang
+++ b/src/main/resources/assets/grimpack/lang/en_US.lang
@@ -645,6 +645,7 @@ container.grill=Grill
 container.grill.tier=Tier
 container.portable_workbench=Portable Workbench
 container.backpack=Backpack
+container.pellet_bag=Pellet Bag
 container.extruder=Extruder
 container.extruder.mined=Mined
 container.extruder.fuel=Fuel: %s
@@ -961,7 +962,7 @@ grimpack.manual.industry.subsection.gravity.page.attract=Their are two types of 
 grimpack.manual.industry.subsection.gravity.page.attract.title=Attractors
 grimpack.manual.industry.subsection.gravity.page.repulse=Their are two types of repulsors the regular Repulsor and the Directional Repulsor. When powered the regular Repulsor will start to push entities away with a range of 12 blocks. The Directional Repulsor is different because only the side with the repulsor end will push entities. 
 grimpack.manual.industry.subsection.gravity.page.repulse.title=Repulsors
-grimpack.manual.industry.subsection.gravity.page.mob_repulsor=The mob repulsor is a portable item that makes all hostile mob do their very best to get out of your way. Passive mobs, players and items are not affected. Gravity boots are not required. Right click to activate.
+grimpack.manual.industry.subsection.gravity.page.mob_repulsor=The mob repulsor is a portable item that makes all hostile mobs do their very best to get out of your way. Passive mobs, players and items are not affected. Gravity boots are not required. Right click to activate.
 grimpack.manual.industry.subsection.gravity.page.mob_repulsor.title=Mob Repulsor
 grimpack.manual.industry.subsection.gravity.page.gravitor=Their are two types of gravitors the regular Gravitor and the Directional Gravitor. When powered the regular Gravitor will start to make entities around it float into the air. The Directional Gravitor is different because only the side with the gravitor end will make entities float into the air. 
 grimpack.manual.industry.subsection.gravity.page.gravitor.title=Gravitors
