Number of blocks added to Extruder GUI

--- a/src/main/resources/assets/grimpack/lang/en_US.lang
+++ b/src/main/resources/assets/grimpack/lang/en_US.lang
@@ -361,7 +361,6 @@ item.unloaded_knife.name=Empty Ballistic Knife
 item.ammo_part.name=Ballistic Knife Blade
 item.button_part.name=Trigger
 item.spring_part.name=Spring
-item.rod_part.name=Metal Rod
 item.black_diamond.name=Black Diamond
 item.black_diamond_boots.name=Black Boots
 item.black_diamond_leggings.name=Black Leggings
@@ -650,6 +649,8 @@ container.pellet_bag=Pellet Bag
 container.extruder=Extruder
 container.extruder.mined=Mined
 container.extruder.fuel=Fuel: %s
+container.extruder.exblocks=Extrude: %s
+container.extruder.mineblocks=Mine: %s
 container.extruder.north=North
 container.extruder.east=East
 container.extruder.south=South
