--- a/src/main/resources/assets/grimpack/lang/en_US.lang
+++ b/src/main/resources/assets/grimpack/lang/en_US.lang
@@ -728,7 +728,7 @@ grimpack.jer.dungeon.desert_level25=Level 25 Desert Well
 grimpack.jer.dungeon.desert_level30=Level 30 Desert Well
 
 grimtools.slingshot.random=Random
-grimtools.slingshot.all=All
+grimtools.slingshot.all=In Order
 grimtools.slingshot.stone=Stone
 grimtools.slingshot.iron=Iron
 grimtools.slingshot.netherrack=Netherrack
