Add in config for pellet damage

--- a/src/main/resources/assets/grimpack/lang/en_US.lang
+++ b/src/main/resources/assets/grimpack/lang/en_US.lang
@@ -530,8 +530,10 @@ Damage from Uranium Ore.tooltip=Determines the amount of damage taken from tryin
 grimpack.tools.cfg.tooltip=Config options for the tools and weapons part of the Grim Pack
 grimpack.tools.cfg.general=General Options
 grimpack.tools.cfg.general.tooltip=This contains general options for the tools part.
+grimpack.tools.cfg.slingshot=Slingshot Options
+grimpack.tools.cfg.slingshot.tooltip=This contains options to modify pellet damage values.
 grimpack.tools.cfg.boomerang=Boomerang Options
-grimpack.tools.cfg.boomerang.tooltip=The contains options to modify range, damage, and other options for boomerangs.
+grimpack.tools.cfg.boomerang.tooltip=This contains options to modify range, damage, and other options for boomerangs.
 grimpack.tools.cfg.ultimatefist=Ultimate Fist Options
 grimpack.tools.cfg.ultimatefist.tooltip=This contains all the options to customize Ultimate Fist to make it even overpowered or less. It is highly configurable.
 Ultimate Fist Damage Against Entity's.tooltip=The amount of damage the the ultimate fist will do against entities
@@ -560,6 +562,12 @@ Diamond Boomerang Damage.tooltip=The amount of damage diamond boomerangs do to e
 Diamond Boomerang Follows.tooltip=True if when a diamond boomerang is thrown it will follow where the player is looking
 Generate Black Diamond.tooltip=Should black diamond ore be generated
 Generate Element 115.tooltip=Should element 115 ore be generated
+Stone Pellet Damage.tooltip=Determines how much damage stone pellets do to entities
+Iron Pellet Damage.tooltip=Determines how much damage iron pellets do to entities
+Netherrack Pellet Damage.tooltip=Determines how much damage netherrack pellets do to entities
+Light Pellet Damage.tooltip=Determines how much damage light pellets do to entities
+Fire Pellet Damage.tooltip=Determines how much damage fire pellets do to entities
+Explosive Pellet Damage.tooltip=Determines how much damage explosive pellets do to entities
 
 grimpack.util.cfg.general=General Options
 grimpack.util.cfg.debug=Debug Options
