More documentation and fixing up for release

--- a/src/main/resources/assets/grimpack/lang/en_US.lang
+++ b/src/main/resources/assets/grimpack/lang/en_US.lang
@@ -1169,10 +1169,12 @@ grimpack.manual.tools.subsection.spears.page.basics.title=Basic Spears
 grimpack.manual.tools.subsection.spears.page.specials=The 5 types of special spears are Explosive, Fire, Slime, Light, and Lightning Spears. The Explosive, Fire, Light, and Lightning Spears cause a special effect where they land. The Explosive causes an explosion, the Fire sets on fire, the Light places a torch, and the Lightning causes a lightning strike. The Slime Spear bounces where it lands.
 grimpack.manual.tools.subsection.spears.page.specials.title=Special Spears
 grimpack.manual.tools.subsection.sling=Slingshot
-grimpack.manual.tools.subsection.sling.page.pellets=The ammo used with the Slingshot are Slingshot Pellets. They are really easy to craft and can be made out of different materials.
+grimpack.manual.tools.subsection.sling.page.pellets=The ammo used with the Slingshot are Slingshot Pellets. There are many different types including stone, iron, netherrack, light, fire, and explosion. Stone, iron and netherrack just do basic damage. Light places a torch, fire lights stuff on fire, and explosion causes an explosion but it only hurts entities.
 grimpack.manual.tools.subsection.sling.page.pellets.title=Pellets
-grimpack.manual.tools.subsection.sling.page.slingshot=The slingshot is an item that you right click to fire pellets with. The slingshot does not do very much damage but it still can hurt.
-grimpack.manual.tools.subsection.sling.page.slingshot.title=Recipe
+grimpack.manual.tools.subsection.sling.page.slingshot=The slingshot can use many different types of ammo. It doesn't have to reload and can be fired very quickly. To switch ammo types by default press M and it will give you information on what mode you are in. This can fire using pellets found in your inventory and in pellet bags.
+grimpack.manual.tools.subsection.sling.page.slingshot.title=Sling Shot
+grimpack.manual.tools.subsection.sling.page.pelletBag=The pellet bag can hold only pellets and instead of storing pellets in your inventory and taking up space you can put pellets in this bag and it can fire from the bag.
+grimpack.manual.tools.subsection.sling.page.pelletBag.title=Pellet Bag
 grimpack.manual.tools.subsection.staff=Powerstaff
 grimpack.manual.tools.subsection.staff.page.recipe=The powerstaff can move blocks. It has four different modes which can be switched with the mode key, M by default. Push mode pushes blocks forward and pull mode pulls blocks backward. If in float mode blocks do not have gravity applied to them and can be suspended in space. The player can 'ride' the block. In dropping mode gravity is applied. This makes blocks behave like gravel or sand.
 grimpack.manual.tools.subsection.staff.page.recipe.title=Recipe
