--- a/src/main/resources/assets/grimpack/lang/en_US.lang
+++ b/src/main/resources/assets/grimpack/lang/en_US.lang
@@ -12,7 +12,8 @@ tile.fire_sensor.name=Fire Alarm
 tile.arrow_sensor.name=Arrow Target
 tile.metal_mesh.name=Metal Mesh
 tile.fan.name=Fan
-tile.decor_door.name=Decor Door
+tile.decor_trap_door.name=Trap Door
+tile.decor_door.name=Colorizer Door
 tile.decor_stairs.name=Stairs
 tile.corner.name=Corner
 tile.sloped_post.name=Sloped Post
