Start on different grave. Add in more documentatoin and tweak more world gen.

--- a/src/main/resources/assets/grimpack/lang/en_US.lang
+++ b/src/main/resources/assets/grimpack/lang/en_US.lang
@@ -1054,6 +1054,10 @@ grimpack.manual.industry.subsection.sensors.page.specific_sensor=The base specif
 grimpack.manual.industry.subsection.sensors.page.specific_sensor.title=Specific Sensor
 grimpack.manual.industry.subsection.sensors.page.upgraded_specific_sensor=The Upgraded Specific Sensor is a more powerful version that has a larger range as well as you can customize the size of the box you are sensing.
 grimpack.manual.industry.subsection.sensors.page.upgraded_specific_sensor.title=Upgraded Specific
+grimpack.manual.industry.subsection.sensors.page.arrow_sensor=This block will emit a redstone pulse when it is hit with an arrow. The arrow will then pop off and be able to be picked up.
+grimpack.manual.industry.subsection.sensors.page.arrow_sensor.title=Arrow Sensor
+grimpack.manual.industry.subsection.sensors.page.fire_sensor=The fire sensor will look below it for fire and if it is detected then it will emit a redstone signal until the fire is put out.
+grimpack.manual.industry.subsection.sensors.page.fire_sensor.title=Fire Sensor
 grimpack.manual.industry.subsection.refining=Refining
 grimpack.manual.industry.subsection.refining.page.uranium=Uranium Ore can be found naturally below the surface in small clusters but if you are in old chunks or you just want to craft some their is a recipe. But be careful because it will hurt you when mining it unless you have a radiation suit.
 grimpack.manual.industry.subsection.refining.page.uranium.title=Uranium Ore
@@ -1133,6 +1137,8 @@ grimpack.manual.industry.subsection.metalworks.page.steeltools=Also added in thi
 grimpack.manual.industry.subsection.metalworks.page.steeltools.title=Steel Tools
 grimpack.manual.industry.subsection.metalworks.page.fuel=To power the Modern Furnace you will need Fuel. Fuel can't be crafted but needs to be refined and to get something to refine you can craft Super Crude Oil which is made from Oily Chunks and Aluminium Cans. You can get oily chunks from mining Black Gold Ore which is another ore that is randomly generated.
 grimpack.manual.industry.subsection.metalworks.page.fuel.title=Fuel
+grimpack.manual.industry.subsection.metalworks.page.metal_mesh=This block allows items to pass through it freely while stopping the player and mobs.
+grimpack.manual.industry.subsection.metalworks.page.metal_mesh.title=Metal Mesh
 grimpack.manual.industry.subsection.machines=Machines
 grimpack.manual.industry.subsection.machines.page.info=Before you are able to craft any of the machines you will need to have made some steel. This is the main material in crafting of the machines. <br>Also a Modern Furnace requires you to have Fuel for it to be powered. So you will have to have made an oil derrick and refinery before you can get a modern furnace.
 grimpack.manual.industry.subsection.machines.page.info.title=Info
