Add in custom refinery recipes... Grills need to use this new method! Closes #81

--- a/src/main/resources/assets/grimpack/lang/en_US.lang
+++ b/src/main/resources/assets/grimpack/lang/en_US.lang
@@ -510,6 +510,10 @@ grimpack.industry.cfg.general=General Options
 grimpack.industry.cfg.general.tooltip=This is just general industry options.
 grimpack.industry.cfg.extruder=Extruder Options
 grimpack.industry.cfg.extruder.tooltip=You can most of how the extruder works by changing the options here.
+grimpack.industry.cfg.refineryRecipes=Refinery Recipes
+grimpack.industry.cfg.refineryRecipes.tooltip=Use this to add new refinery recipes. \nTo add a new recipe add a line then write out the [RawItemName] separated by a '>' then write out the [RefinedItemName]. For mod items make sure to add the modID with a colon ':' and the then the item name. \nExample: grimpack:chocolate_ball>grimpack:chocolate_bar
+grimpack.industry.cfg.refineryRecipesCat=Custom Refinery Recipes
+grimpack.industry.cfg.refineryRecipesCat.tooltip=Where you can add more refinery recipes
 Generate Uranium.tooltip=True if Uranium ore should generate
 Generate Aluminum.tooltip=True if aluminum ore should generate
 Generate Oil Ore.tooltip=True if oil ore should generate
