--- a/src/main/resources/assets/grimpack/lang/en_US.lang
+++ b/src/main/resources/assets/grimpack/lang/en_US.lang
@@ -465,9 +465,9 @@ achievement.open_manual=Open Instruction Manual
 achievement.open_manual.desc=Right click an instruction manual to open it.
 
 achievement.cuisine_start=Cuisine Start
-achievement.cuisine_start.desc=Open the Cuisine section in the instruction manual.
+achievement.cuisine_start.desc=Open the Cuisine section in the instruction manual
 achievement.cocoa=Chocolaty
-achievement.cocoa.desc=Break some cocoa pods and pick up the powder.
+achievement.cocoa.desc=Break some cocoa pods and pick up the powder
 achievement.chocolate_mould=Moulding the Future
 achievement.chocolate_mould.desc=Craft a chocolate bar mould
 achievement.chocolate_bar=Appetite Spoiler
@@ -484,19 +484,89 @@ achievement.pie=Delicious Pie
 achievement.pie.desc=Bake your favorite pie flavor
 
 achievement.decor_start=Decor Start
-achievement.decor_start.desc=Open the Decor section in the instruction manual.
+achievement.decor_start.desc=Open the Decor section in the instruction manual
+achievement.colorizer=Got Colorizer
+achievement.colorizer.desc=Get some dye and make a colorizer
+achievement.colorizer_lamp=Light it Up
+achievement.colorizer_lamp.desc=Make a colorizer lamp post
+achievement.colorizer_hidden=What are you hiding?
+achievement.colorizer_hidden.desc=Create a colorizer door
+achievement.colorizer_fireplace=Now that looks nice
+achievement.colorizer_fireplace.desc=Create a fireplace from colorizer and burning wood
 
 achievement.industry_start=Industry Start
-achievement.industry_start.desc=Open the Industry section in the instruction manual.
+achievement.industry_start.desc=Open the Industry section in the instruction manual
+achievement.aluminum=Nice Metal
+achievement.aluminum.desc=Find some aluminum ore and smelt it
+achievement.c4=Plastic Explosive
+achievement.c4.desc=Use some redstone and gunpowder to make some C4
+achievement.bomb_shell=Someone's Making Bombs
+achievement.bomb_shell.desc=Use some of that aluminum to make a bomb shell
+achievement.nuclear_bomb=Thats Nuclear
+achievement.nuclear_bomb.desc=Create a more powerful explosive than c4 and tnt combined
+achievement.sensor=Sense-ational
+achievement.sensor.desc=Create a sensor that uses a GPS
+achievement.upgraded_sensor=Sensors at Max
+achievement.upgraded_sensor.desc=Craft an upgraded sensor to sense all the things
+achievement.gravity_science=Gravity Science
+achievement.gravity_science.desc=Create something uses gravity science (Attractor, Repulsor, or Gravitor)
+achievement.steel=Thats Pure
+achievement.steel.desc=Make a very pure form of iron
+achievement.modern_furnace=Modern Smelting
+achievement.modern_furnace.desc=Create a modern furnace to quickly smelt items
 
 achievement.tools_start=Tools Start
-achievement.tools_start.desc=Open the Tools section in the instruction manual.
+achievement.tools_start.desc=Open the Tools section in the instruction manual
+achievement.obsidian_bucket=Now Thats A Bucket
+achievement.obsidian_bucket.desc=Create an obsidian bucket out of... oh yeah obsidian
+achievement.black_diamond=Better than Diamond
+achievement.black_diamond.desc=Smelt black diamonds from black diamond ore
+achievement.black_tools=Thats a Dark Tool
+achievement.black_tools.desc=Create any tool using black diamonds
+achievement.black_armor=Thats Dark Armor
+achievement.black_armor.desc=Create any piece of armor using black diamonds
+achievement.spear=The Caveman
+achievement.spear.desc=Create a spear like the cavemen did it
+achievement.spear_lightning=Advanced Caveman Tech
+achievement.spear_lightning.desc=Create a lightning spear just like the cavemen did it
+achievement.boomerang=Please Come Back
+achievement.boomerang.desc=Craft a boomerang to always have a friend that comes back
+achievement.diamond_boomerang=Better Boomerang
+achievement.diamond_boomerang.desc=Create a more powerful version of the boomerang using diamonds
+achievement.magic_wand=Magic!!
+achievement.magic_wand.desc=Craft some type of magic wand
+achievement.better_magic_wand=Reinforced Magic!!
+achievement.better_magic_wand.desc=Upgrade to a more powerful magic wand
+achievement.pokeball=Gotta Catch Em' All
+achievement.pokeball.desc=Create a Pokeball
+achievement.element_115=Next Gen Element
+achievement.element_115.desc=Find some Element 115 in the world
+achievement.ray_gun=Ray Gun
+achievement.ray_gun.desc=Make a ray gun
+achievement.advanced_ray_gun=Advanced Ray Gun
+achievement.advanced_ray_gun.desc=Make an advanced ray gun
 
 achievement.util_start=Util Start
-achievement.util_start.desc=Open the Util section in the instruction manual.
+achievement.util_start.desc=Open the Util section in the instruction manual
+achievement.die=You died, have a grave!
+achievement.die.desc=Die and see what happens...
+achievement.fus_ro_dah=Fus Ro Dah!!
+achievement.fus_ro_dah.desc=Use a Fus Ro Dah
 
 achievement.world_start=World Start
-achievement.world_start.desc=Open the World section in the instruction manual.
+achievement.world_start.desc=Open the World section in the instruction manual
+achievement.fungus=Fungus Time
+achievement.fungus.desc=Create some basic growing fungus
+achievement.building_fungus=When Could Fungus Build?
+achievement.building_fungus.desc=Upgrade to a form of fungus that can build blocks
+achievement.fungicide=Too Much Fungus?
+achievement.fungicide.desc=Craft some fungicide to get rid of excess fungus
+achievement.ore_building_fungus=Thats Overpowered
+achievement.ore_building_fungus.desc=Create some fungus that grows ores
+achievement.treasure=Don't Kill Him
+achievement.treasure.desc=Find and tame a treasure chest (mimic) in the wild
+achievement.ice_pixie=Rare Encounter
+achievement.ice_pixie.desc=Find and kill, with a torch in hand, a Ice Pixie
 
 #### Config Tooltips ###
 grimpack.core.cfg.tooltip=Config options for the core part of the Grim Pack
